# agent-docs-generator

./: .gitignore  README.md  env.example  pyproject.toml  test_installation.py
src/: __init__.py  config.py  schemas.py
src/app/: __init__.py  main.py
src/clients/: bitbucket_client.py  confluence_client.py  docs_repo_client.py  jira_client.py
src/generators/: __init__.py  guide_edits.py  release_notes.py
src/graph/: __init__.py  release_docs_graph.py
src/prompts/: __init__.py  release_notes_prompt.py
src/tools/: __init__.py  bitbucket_tool.py  confluence_tool.py  docs_pr_tool.py  jira_tool.py
tests/: __init__.py  conftest.py  test_generators.py  test_integration.py  test_schemas.py
